// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FollowedBy > should render empty state 1`] = `
"<div id="test-wrapper">
  <!--v-if-->
</div>"
`;

exports[`FollowedBy > should render for 1 follower 1`] = `
"<div id="test-wrapper">
  <div class="flex items-center">
    <div class="flex space-x-[-14px]">
      <lukso-profile size="x-small" profile-address="0x1"></lukso-profile>
    </div>
    <div class="paragraph-inter-12-medium pl-2"><span>Followed by @john you follow</span></div>
  </div>
</div>"
`;

exports[`FollowedBy > should render for 2 followers 1`] = `
"<div id="test-wrapper">
  <div class="flex items-center">
    <div class="flex space-x-[-14px]">
      <lukso-profile size="x-small" profile-address="0x2"></lukso-profile>
      <lukso-profile size="x-small" profile-address="0x1"></lukso-profile>
    </div>
    <div class="paragraph-inter-12-medium pl-2"><span>Followed by @john, @jane you follow</span></div>
  </div>
</div>"
`;

exports[`FollowedBy > should render for 3 followers 1`] = `
"<div id="test-wrapper">
  <div class="flex items-center">
    <div class="flex space-x-[-14px]">
      <lukso-profile size="x-small" profile-address="0x2"></lukso-profile>
      <lukso-profile size="x-small" profile-address="0x3"></lukso-profile>
      <lukso-profile size="x-small" profile-address="0x1"></lukso-profile>
    </div>
    <div class="paragraph-inter-12-medium pl-2"><span>Followed by @john, 0x2 and 1 other you follow</span></div>
  </div>
</div>"
`;

exports[`FollowedBy > should render for 4 followers 1`] = `
"<div id="test-wrapper">
  <div class="flex items-center">
    <div class="flex space-x-[-14px]">
      <lukso-profile size="x-small" profile-address="0x2"></lukso-profile>
      <lukso-profile size="x-small" profile-address="0x3"></lukso-profile>
      <lukso-profile size="x-small" profile-address="0x1"></lukso-profile>
    </div>
    <div class="paragraph-inter-12-medium pl-2"><span>Followed by @john, @jane and 2 others you follow</span></div>
  </div>
</div>"
`;

exports[`FollowedBy > should render for 5 followers 1`] = `
"<div id="test-wrapper">
  <div class="flex items-center">
    <div class="flex space-x-[-14px]">
      <lukso-profile size="x-small" profile-address="0x2"></lukso-profile>
      <lukso-profile size="x-small" profile-address="0x3"></lukso-profile>
      <lukso-profile size="x-small" profile-address="0x1"></lukso-profile>
    </div>
    <div class="paragraph-inter-12-medium pl-2"><span>Followed by @john, @jane and 3 others you follow</span></div>
  </div>
</div>"
`;
